@@ -5,6 +5,7 @@
 
 #ifdef __GNUC__
 #  define _STLP_NO_WCHAR_T
+#  define _STLP_NO_CWCHAR
 #  define _STLP_NO_LONG_DOUBLE
 #endif
 
